[package]
name = "cut_optimizer_1d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serialize=["serde"]

[dependencies]
rand = "0.8.3"
fnv = "1.0"
serde = { version = "1.0", features=["derive"], optional = true }
smallvec = "1.8"

[dev-dependencies]
criterion = { version = "0.5.1", features=["html_reports"] }

[[bench]]
name = 'optimizer'
harness = false