[package]
name = "wy_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
serde = { version="1", features = ["derive"] }
serde_json = "1.0"
axum ="0.6.4"
tokio = { version="1", features = ["full"] }
md5 = "0.7.0"
rustflake = "0.1.0"
http = "1.0.0"
rbatis = { version = "3.1.16", default-features = false, features = ["mysql", "runtime-async-std-rustls"] }
rbson = "2.0.3"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
rand = "0.8.3"
random-number = "0.1.8"

cut_optimizer_1d = { path = "../cut_optimizer_1d" }
cut_optimizer_2d = { path = "../cut_optimizer_2d" }
wy_domain = { path = "../wy_domain" }