[package]
name = "wy_domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
validator = "0.16.1"
validator_derive = "0.16.0"
#jwt
jsonwebtoken = "9.1.0"
rbson = "2.0"
rbatis = { version = "3.1.16", default-features = false, features = ["mysql", "runtime-async-std-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
getset = "0.1.2"
axum = {version="0.6.4",features=["multipart","ws"]}
http = "1.0.0"